--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
     "jest": "^26.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
   },
